# Capstone_Project_III

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  analytics.hpp  common.hpp  dijkstra_engine  engine_cli_commands.md  intro  intro.cpp  intro_test  main  main.cpp  main.tex  main_test  notes.txt  report_template_v4.aux  report_template_v4.fdb_latexmk  report_template_v4.fls  report_template_v4.out  report_template_v4.synctex  report_template_v4.tex  simple_ode.cpp
.github/workflows/: ci.yml  deploy-render.yml
backend/: go.mod  go.sum  handlers.go  main.go  main_test.go  project.go  server.go
engine/include/: analytics.hpp  common.hpp  mesh_engine.hpp
engine/src/: main.cpp  mesh_engine.cpp
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts
frontend/components/: GeodesicMesh.tsx
frontend/e2e/: ui-backend-flow.spec.ts
frontend/public/: analytics.json  heat_result.json  result.json
frontend/src/: App.tsx  VertexLabels.tsx
frontend/src/types/: AnalyticsJson.ts  DijkstraJson.ts
include/geodesic_lab/algorithms/: dijkstra_result.hpp  dijkstra_solver.hpp  heat_method.hpp
include/geodesic_lab/analytics/: analytic_curves.hpp  analytic_normalization.hpp  analytic_params.hpp  analytic_service.hpp  analytic_string_utils.hpp  analytic_surface_curves.hpp  analytic_types.hpp
include/geodesic_lab/io/: analytics_json_writer.hpp  json_escape.hpp  obj_loader.hpp  result_json_writer.hpp
include/geodesic_lab/mesh/: adjacency_builder.hpp  mesh.hpp
include/geodesic_lab/types/: christoffel2.hpp  face.hpp  geodesic_state.hpp  mesh_types.hpp  metric2.hpp  vec3.hpp  vec3_ops.hpp
src/algorithms/: dijkstra_solver.cpp  heat_method.cpp
src/analytics/: analytic_normalization.cpp  analytic_service.cpp  analytic_string_utils.cpp  analytic_surface_curves.cpp
src/io/: analytics_json_writer.cpp  obj_loader.cpp  result_json_writer.cpp
src/mesh/: adjacency_builder.cpp
tests/: CMakeLists.txt  analytics_service_test.cpp  dijkstra_solver_test.cpp  heat_method_test.cpp  obj_loader_test.cpp
tools/meshgen/: README.md  __init__.py  generate.py  obj_writer.py  primitives.py
